fix-swagger: fix docs route
