# src/router/docs/swagger.json
@@ -29,13 +29,6 @@
     }
   ],
   "paths": {
-    "/api/v1/docs": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
     "/api/v1/tags/": {
       "get": {
         "tags": [
